[package]
name = "extract-region-polygon"
version = "0.1.0"
authors = ["Laura VIETOR <pvietor@centrale-med>"]
description = "A small library to extract the border of a polyomino defined by the coordinate of its squares."
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
